// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render actions for non admin 1`] = `
<div
  className="page page-limited"
>
  <MembersPageHeader
    total={2}
  />
  <MembersListHeader
    handleSearch={[Function]}
    total={2}
  />
  <MembersList
    members={
      Array [
        Object {
          "avatar": "",
          "groupCount": 3,
          "login": "admin",
          "name": "Admin Istrator",
        },
        Object {
          "avatar": "7daf6c79d4802916d83f6266e24850af",
          "groupCount": 1,
          "login": "john",
          "name": "John Doe",
        },
      ]
    }
    organization={
      Object {
        "key": "foo",
        "name": "Foo",
      }
    }
    removeMember={[Function]}
    updateMemberGroups={[Function]}
  />
  <ListFooter
    count={2}
    loadMore={[Function]}
    ready={true}
    total={2}
  />
</div>
`;

exports[`should render actions for admin 1`] = `
<div
  className="page page-limited"
>
  <MembersPageHeader
    loading={true}
    total={2}
  >
    <div
      className="page-actions"
    >
      <div
        className="button-group"
      >
        <AddMemberForm
          addMember={[Function]}
        />
      </div>
    </div>
  </MembersPageHeader>
  <MembersListHeader
    handleSearch={[Function]}
    total={2}
  />
  <MembersList
    members={
      Array [
        Object {
          "avatar": "",
          "groupCount": 3,
          "login": "admin",
          "name": "Admin Istrator",
        },
        Object {
          "avatar": "7daf6c79d4802916d83f6266e24850af",
          "groupCount": 1,
          "login": "john",
          "name": "John Doe",
        },
      ]
    }
    organization={
      Object {
        "canAdmin": true,
        "key": "foo",
        "name": "Foo",
      }
    }
    removeMember={[Function]}
    updateMemberGroups={[Function]}
  />
  <ListFooter
    count={2}
    loadMore={[Function]}
    ready={false}
    total={2}
  />
</div>
`;
